--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,7 @@ body {
   height: 80px;
   justify-content: space-between;
   align-items: center;
-  background: #fff; 
-  
+  background: #fff;
 }
 
 .head.fixed {
@@ -24,14 +23,17 @@ body {
   width: 100%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
   z-index: 101;
-  animation: headerfix  1s ease-in-out;
- 
+  animation: headerfix 1s ease-in-out;
 }
 
 @keyframes headerfix {
-  from { opacity: 0;  }
-  to {  opacity: 1;  }
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
 
 .b-menu__list {
   display: flex;
@@ -902,10 +904,19 @@ img.b-tab {
   margin: 0 auto;
   box-sizing: border-box;
   background: #ffffff;
-  /* 1 */
   box-shadow: 0px 8px 30px rgba(18, 18, 18, 0.1);
   border-radius: 5px;
+
 }
+
+.modal-popup .b-facebook__form {
+    width:  809px;
+    box-sizing: border-box;  
+  
+}
+
+
+
 
 .b-facebook__form__title {
   font-weight: bold;
@@ -1021,4 +1032,17 @@ img.b-tab {
 
 .b-footer__contact > li {
   margin-bottom: 26px;
+}
+
+.modal-popup {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+   justify-content: space-around;
+  align-items: center;
+  display: none;
 }
