--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body {
   right: 0;
 
   color: #fff;
-  z-index: 999;
+  z-index: 99;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -179,6 +179,11 @@ body {
 .s-item1 {
   background: url(../img/slide1.jpg) no-repeat 0 0;
   background-size: cover;
+}
+
+.b-sitem {
+  position: relative;
+  z-index: 100;
 }
 
 .b-sitem__title {
@@ -906,17 +911,12 @@ img.b-tab {
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(18, 18, 18, 0.1);
   border-radius: 5px;
-
 }
 
 .modal-popup .b-facebook__form {
-    width:  809px;
-    box-sizing: border-box;  
-  
+  width: 809px;
+  box-sizing: border-box;
 }
-
-
-
 
 .b-facebook__form__title {
   font-weight: bold;
@@ -978,6 +978,7 @@ img.b-tab {
   font-size: 18px;
   line-height: 21px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .b-facebook__file {
@@ -1042,7 +1043,56 @@ img.b-tab {
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
-   justify-content: space-around;
+  justify-content: space-around;
   align-items: center;
   display: none;
+}
+
+.lightbox {
+  position: fixed;
+  left: 0;
+    top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+}
+
+.lightbox__fl {
+  max-width: 1170px;
+}
+
+.lightbox__fl > img {
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  display: block;
+  border-radius: 5px;
+}
+
+.lightbox__fl > span {
+  font-size: 18px;
+  line-height: 21px;
+  margin-top: 30px;
+  text-align: center;
+  color: #fff;
+  display: block;
+  
+}
+
+.lightbox__fl {
+  position: relative
+}
+
+
+.lightbox__close {
+  height: 25px;
+  width: 25px;
+  background: url(../img/close.svg) no-repeat center center;
+  position: absolute;
+  right: -75px;
+  top: -25px;
+  cursor: pointer;
 }
