--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -35,6 +35,10 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+input:focus,
+button:focus {
+	outline: none;
+}
 
 *,
 *::before,
