--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -36,7 +36,8 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 input:focus,
-button:focus {
+button:focus,
+textarea:focus {
 	outline: none;
 }
 
